# rust-auth-service

./: .env  .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  README.md  automation.sh
.github/workflows/: test-all.yml
access-control/: Cargo.toml
access-control/benches/: constant_time_authentication.rs
access-control/src/: lib.rs
authorization/: Cargo.toml
authorization/src/: lib.rs
database-integration/: Cargo.toml
database-integration/src/: error_mapping.rs  errors.rs  lib.rs  user.rs  users.rs  utility.rs
middleware/: Cargo.toml
middleware/src/: lib.rs
service-errors/: Cargo.toml
service-errors/src/: lib.rs
sql/: down.sql  up.sql
src/: configuration.rs  main.rs  pages.rs  routes.rs
templates/: base.html  login.html  register.html  status.html
