[package]
name = "rust-auth-service"
version = "0.1.0"
authors = ["Benjamin Faller", "Sebastian Voigt"]
edition = "2018"

[dependencies]
authorization = { path = "authorization" }
database-integration = { path = "database-integration" }
service-errors = { path = "service-errors" }

actix-web = "3"
dotenv = "0.15.0"
env_logger = "0.8"
sqlx = { version = "0.4", features = [ "runtime-actix-native-tls", "postgres", "uuid", "chrono" ] }

[workspace]
members = [
    "service-errors",
    "database-integration",
    "authorization",
    "access-control",
]
