[package]
name = "access-control"
version = "0.1.0"
authors = ["Benjamin Faller <git@pwned.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.2"
rand = "0.8"
thiserror = "1"

[dev-dependencies]
criterion = { version = "0.3", default-features = false, features = [ "async_futures" ] }
futures-util = { version = "0.3.7", default-features = false }

[[bench]]
name = "constant_time_authentication"
harness = false
