[package]
name = "authorization"
version = "0.1.0"
authors = ["Benjamin Faller", "Sebastian Voigt"]
edition = "2018"

[dependencies]
futures-core = { version = "0.3.7", default-features = false }
futures-util = { version = "0.3.7", default-features = false }
actix-service = "1"
actix-web = "3"

access-control = { path = "../access-control" }
