[package]
name = "authorization"
version = "0.1.0"
authors = ["Benjamin Faller", "Sebastian Voigt"]
edition = "2018"

[dependencies]
access-control = { path = "../access-control" }
database-integration = { path = "../database-integration" }

actix-service = "1"
actix-web = "3"
futures-core = { version = "0.3.7", default-features = false }
futures-util = { version = "0.3.7", default-features = false }
log = "0.4"
sqlx = { version = "0.4", features = [ "runtime-actix-native-tls", "postgres", "uuid", "chrono" ] }
